# pyo3-debug-vscode

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml  requirements.txt
python/demo/: __init__.py  demo.pyi  main.py
python/tests/: test_all.py
src/: lib.rs
